@@ -18,26 +18,24 @@ import java.util.Set;
 
 public class GroupObukhovTest extends BaseTest {
 
-    private final String URL = "https://urent.ru/";
-
-    private final String URLFranchise = "https://start.urent.ru/";
-
-    private final List<String> BASIC_COLORS_HEX = Arrays.asList("#804AFF", "#000000", "#FFFFFF");
-
-    private final List<String> LINK_TO_CHECK_BASIC_COLORS = Arrays.asList(
+    private final String MAIN_PAGE = "https://urent.ru/";
+    private final String URL_FRANCHISE = "https://start.urent.ru/";
+    private final List<String> BASIC_COLORS_HEX = List.of("#804AFF", "#000000", "#FFFFFF");
+    private final List<String> MAIN_MENU = List.of("Главная", "Помощь", "Вакансии", "Франшиза");
+    private final List<String> LINK_TO_CHECK_BASIC_COLORS = List.of(
             "https://design.urent.ru/img/colors/804aff.svg",
             "https://design.urent.ru/img/colors/000000.svg",
             "https://design.urent.ru/img/colors/ffffff.svg");
 
     private List<WebElement> getMainMenu() {
-        return getDriver().findElements(By.xpath("//ul[@class=\"menu-list\"]/li"));
+        return getDriver().findElements(By.xpath("//ul[@class='menu-list']/li"));
     }
 
     private List<WebElement> getMenuFranchise() {
-        return getDriver().findElements(By.xpath("//ul[@class=\"navigation-list\"]/li"));
+        return getDriver().findElements(By.xpath("//ul[@class='navigation-list']/li"));
     }
 
-    private List<WebElement> checkMenuHelp(String chooseMenu) {
+    private List<WebElement> getMenuHelp(String chooseMenu) {
         switch (chooseMenu) {
             case "Часто задаваемые вопросы":
                 return getDriver().findElements(By.xpath("//div[@class = 'faq-block'][1]/button"));
@@ -57,32 +55,32 @@ public class GroupObukhovTest extends BaseTest {
     }
 
     private void goToHelpPage() {
-        getDriver().get(URL);
+        getDriver().get(MAIN_PAGE);
         getMainMenu().get(1).click();
     }
 
     private void goToBrandBookPage() {
-        getDriver().get(URL);
+        getDriver().get(MAIN_PAGE);
         getDriver().findElement(By.xpath("//a[contains(text(), 'Брендбук')]")).click();
     }
 
     private void goToAboutServicePage() {
-        getDriver().get(URLFranchise);
+        getDriver().get(URL_FRANCHISE);
         getMenuFranchise().get(0).click();
     }
 
     private void goToFunctionPage() {
-        getDriver().get(URLFranchise);
+        getDriver().get(URL_FRANCHISE);
         getMenuFranchise().get(1).click();
     }
 
     private void goToOurPartnerPage() {
-        getDriver().get(URLFranchise);
+        getDriver().get(URL_FRANCHISE);
         getMenuFranchise().get(2).click();
     }
 
     private void goToStartPage() {
-        getDriver().get(URLFranchise);
+        getDriver().get(URL_FRANCHISE);
         getMenuFranchise().get(3).click();
     }
 
@@ -92,52 +90,55 @@ public class GroupObukhovTest extends BaseTest {
     }
 
     private void goToStartBusinessPage() {
-        getDriver().get(URL);
+        getDriver().get(MAIN_PAGE);
         getMainMenu().get(3).click();
     }
 
-    private void goToRoundButtonOnHelpPage(){
+    private void goToRoundButtonOnHelpPage() {
         goToHelpPage();
         getWait(2).until(ExpectedConditions.elementToBeClickable(By.id("uw-main-button"))).click();
     }
 
     private static String getRandomString(int length) {
-        return RandomStringUtils.random(length,
-                "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ");
+        return RandomStringUtils.random(length, "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ");
     }
 
-    private static String getRandomEmail() {
-        return getRandomString(5).concat("@").concat(getRandomString(5)).concat(".com").toLowerCase();
+    private static String getRandomDomen() {
+        String[] array = new String[]{".com", ".org", ".ru", ".info", ".edu", ".de", ".kz", ".by"};
+        int a = (int) (Math.random() * array.length);
+        return array[a];
+    }
+
+    private static String getRandomEmail(int a, int b) {
+        return getRandomString(a).concat("@").concat(getRandomString(b)).concat(getRandomDomen());
     }
 
     private Actions getAction() {
         return new Actions(getDriver());
     }
 
-    private WebDriverWait getWait(int timeWaiting){
+    private WebDriverWait getWait(int timeWaiting) {
         return new WebDriverWait(getDriver(), Duration.ofSeconds(timeWaiting));
     }
 
     @Test
     public void testCheckCountMainMenuButtons() {
-        getDriver().get(URL);
+        getDriver().get(MAIN_PAGE);
 
         Assert.assertEquals(4, getMainMenu().size());
     }
 
     @Test
     public void testCheckNamesMainMenuButtons() {
-        getDriver().get(URL);
-        List<String> expectedResult = Arrays.asList("Главная", "Помощь", "Вакансии", "Франшиза");
+        getDriver().get(MAIN_PAGE);
 
         for (int i = 0; i < getMainMenu().size(); i++) {
-            Assert.assertEquals(getMainMenu().get(i).getText(), expectedResult.get(i));
+            Assert.assertEquals(getMainMenu().get(i).getText(), MAIN_MENU.get(i));
         }
     }
 
     @Test
     public void testHelpLink() {
-        getDriver().get(URL);
         goToHelpPage();
 
         Assert.assertEquals(getDriver().getCurrentUrl(), "https://urent.ru/rules/index.html");
@@ -145,7 +146,6 @@ public class GroupObukhovTest extends BaseTest {
 
     @Test
     public void testHelpMenuHeaders() {
-        getDriver().get(URL);
         goToHelpPage();
 
         List<WebElement> actualResult = getDriver().findElements(By.xpath("//h3"));
@@ -164,18 +164,16 @@ public class GroupObukhovTest extends BaseTest {
 
     @Test
     public void testCountHelpsMenuPointsInHeaders() {
-        getDriver().get(URL);
         goToHelpPage();
 
-        Assert.assertEquals(checkMenuHelp("Стоимость аренды и финансы").size(), 16);
+        Assert.assertEquals(getMenuHelp("Стоимость аренды и финансы").size(), 16);
     }
 
     @Test
     public void testHelpsMenuContent() {
-        getDriver().get(URL);
         goToHelpPage();
 
-         List<String> expectedResult = Arrays.asList(
+        final List<String> expectedResult = Arrays.asList(
                 "Часовой тариф",
                 "Тариф \"Пока не сядет\"",
                 "Daily Pass",
@@ -187,7 +185,7 @@ public class GroupObukhovTest extends BaseTest {
                 "Как работает страхование?");
 
         List<String> helpMenuContent = new ArrayList<>();
-        for (WebElement w : checkMenuHelp("Часто задаваемые вопросы")) {
+        for (WebElement w : getMenuHelp("Часто задаваемые вопросы")) {
             helpMenuContent.add(w.getText());
         }
 
@@ -196,19 +194,19 @@ public class GroupObukhovTest extends BaseTest {
 
     @Test
     public void testCheckUrentPageButton() {
-        getDriver().get(URL);
         goToHelpPage();
 
         getDriver().findElement(By.cssSelector(".logotype-img")).click();
 
-        Assert.assertEquals(getDriver().findElement(By.xpath("//h1")).getText(), "Привет! Мы — Юрент, шеринг электросамокатов и велосипедов");
+        Assert.assertEquals(getDriver().findElement(By.xpath("//h1")).getText(),
+                "Привет! Мы — Юрент, шеринг электросамокатов и велосипедов");
     }
 
     @Test
     public void testCheckFooterMenu() {
         final List<String> footerHeaders = Arrays.asList("Документы", "Мы тут", "Контакты");
 
-        getDriver().get(URL);
+        getDriver().get(MAIN_PAGE);
         List<WebElement> footerMenu = getDriver().findElements(By.cssSelector(".footer div p"));
 
         for (int i = 0; i < footerMenu.size(); i++) {
@@ -220,61 +218,34 @@ public class GroupObukhovTest extends BaseTest {
     public void testLinkToBrandBookPage() {
         goToBrandBookPage();
 
-        Assert.assertEquals(getDriver().findElement(By.cssSelector(".logotype-img")).getAttribute("alt"), "Логотип Urent");
+        Assert.assertEquals(getDriver().findElement(By.cssSelector(".logotype-img")).getAttribute("alt"),
+                "Логотип Urent");
     }
 
     @Test
     public void testLinkPrivacyPolicy() {
-        getDriver().get(URL);
+        getDriver().get(MAIN_PAGE);
+
         WebElement linkPrivacyPolicy = getDriver().findElement(By.xpath("//a[@href='/docs/privacy.html'] "));
         linkPrivacyPolicy.click();
         WebElement titlePrivacyPolicy = getDriver().findElement(By.xpath("//h1[text()='Политика конфиденциальности']"));
+
         Assert.assertEquals(titlePrivacyPolicy.getText(), "Политика конфиденциальности");
     }
 
     @Test
     public void testLinkContractJoin() {
-        getDriver().get(URL);
-        WebElement linkContractJoin = getDriver().findElement(By.xpath("//a [@href='/docs/accession.html']"));
+        getDriver().get(MAIN_PAGE);
+
+        WebElement linkContractJoin = getDriver().findElement(By.xpath("//a[@href='/docs/accession.html']"));
         linkContractJoin.click();
-        WebElement titleContractJoin = getDriver().findElement(By.xpath("//h1 [text() = 'Договор о предоставлении права использования Сервиса Юрент']"));
-        Assert.assertEquals(titleContractJoin.getText(), "Договор о предоставлении права использования Сервиса Юрент");
+
+        Assert.assertEquals(getDriver().findElement(By.tagName("h1")).getText(),
+                "Договор о предоставлении права использования Сервиса Юрент");
     }
 
     @Test
-    public void testActiveElementsOfMainMenu(){
-        getDriver().get(URL);
-        List<WebElement> nowMainMenu = getDriver().findElements(By.cssSelector(".menu-list"));
-        //List<String> expectedMainMenu = Arrays.asList("Главная", "Помощь", "Вакансии", "Франшиза");
-        int size = nowMainMenu.size();
-        int activeElement = size;
-        int countInactiveElement = 0;
-        int countClick = 0;
-        for (int i = 0; i < size - 2; i++){
-            if(activeElement < size){ // проверяем элемент "Главная" два раза, при начальной загрузке сайта и при клике.
-                if(countClick == 0){
-                    i = 0;
-                }
-                nowMainMenu.get(i).click();
-                countClick++;
-            }// пропускаем первый раз.
-            for (int j = 0; j < size; j++) {
-                if (nowMainMenu.get(j).getAttribute("class").contains("menu-active-link")) {
-                    activeElement = j;
-                } else {
-                    countInactiveElement++;
-                }
-            }
-
-            Assert.assertTrue(activeElement == i && size - countInactiveElement == 1);
-
-            countInactiveElement = 0;
-        }
-
-    }
-
-    @Test
-    public void testCheckBrandBookBasicColorsHEX() {
+    public void testBrandBookBasicColorsHEX() {
         goToPalette();
         List<WebElement> colors = getDriver().findElements(By.xpath("//div[@id = 'palette-three']//div[@class = 'colorchart']"));
 
@@ -284,8 +255,9 @@ public class GroupObukhovTest extends BaseTest {
     }
 
     @Test
-    public void testCheckBrandBookAdditionalColorsHEX() {
+    public void testBrandBookAdditionalColorsHEX() {
         goToPalette();
+
         List<WebElement> colors = getDriver().findElements(By.xpath("//div[@id = 'palette-four']//div[@class = 'colorchart']"));
         List<String> expectedResult = Arrays.asList("#FFC65B", "#FF73D5", "#9FD7FF");
 
@@ -295,8 +267,8 @@ public class GroupObukhovTest extends BaseTest {
     }
 
     @Test
-    public void testCheckDownloadAppButtonColors() {
-        getDriver().get(URL);
+    public void testDownloadAppButtonColors() {
+        getDriver().get(MAIN_PAGE);
         WebElement downloadAppButton = getDriver().findElement(By.cssSelector(".menu-button"));
 
         Assert.assertEquals(downloadAppButton.getCssValue("color"), "rgba(255, 255, 255, 1)");
@@ -304,19 +276,19 @@ public class GroupObukhovTest extends BaseTest {
     }
 
     @Test
-    public void testCheckHeroButtonColors() {
-        getDriver().get(URL);
+    public void testHeroButtonColors() {
+        getDriver().get(MAIN_PAGE);
+
         WebElement heroButton = getDriver().findElement(By.cssSelector(".hero-button-text"));
 
         Assert.assertEquals(heroButton.getCssValue("color"), "rgba(128, 74, 255, 1)");
-        Assert.assertEquals(heroButton.getCssValue("background-color"), "rgba(0, 0, 0, 0)");
     }
 
     @Test
     public void testCheckHeroButtonColorsAfterNavigateMouse() {
-        getDriver().get(URL);
-        WebElement heroButton = getDriver().findElement(By.cssSelector(".hero-button"));
+        getDriver().get(MAIN_PAGE);
 
+        WebElement heroButton = getDriver().findElement(By.cssSelector(".hero-button"));
         String startBackgroundColor = Color.fromString(heroButton.getCssValue("background-color")).asRgb();
         getAction()
                 .moveToElement(heroButton)
@@ -329,15 +301,15 @@ public class GroupObukhovTest extends BaseTest {
 
     @Test
     public void testCheckHowToUseService() {
-        getDriver().get(URL);
+        getDriver().get(MAIN_PAGE);
 
         List<WebElement> stepNumbersHowToUseService = getDriver().findElements(By.cssSelector(".block3-grid span"));
         List<WebElement> stepNamesHowToUseService = getDriver().findElements(By.cssSelector(".block3-grid li"));
         List<WebElement> descriptionHowToUseService = getDriver().findElements(By.cssSelector(".block3-grid p"));
 
-        String propertyActiveButton = "2px solid rgb(128, 74, 255)";
-        List<String> stepsNames = Arrays.asList("Найди самокат", "Отсканируй QR", "Выбери тариф", "Можно ехать!");
-        List<String> stepsDescriptions = Arrays.asList(
+        final String propertyActiveButton = "2px solid rgb(128, 74, 255)";
+        final List<String> stepsNames = List.of("Найди самокат", "Отсканируй QR", "Выбери тариф", "Можно ехать!");
+        final List<String> stepsDescriptions = List.of(
                 "На карте в приложении отмечены все наши самокаты, доступные для аренды.В жизни они фиолетовые, иногда на них бывает брендинг города",
                 "Когда самокат перед тобой – нажми на круглую кнопку сканирования.Отсканируй QR-код.Он будет на руле самоката",
                 "Осталось выбрать тариф.Поминутный выгоден для небольших поездок.Если собрался кататься долго – лучше взять “Пока не сядет” или проездной на день",
@@ -356,7 +328,7 @@ public class GroupObukhovTest extends BaseTest {
 
     @Test
     public void testLinkVacancy() {
-        getDriver().get(URL);
+        getDriver().get(MAIN_PAGE);
         WebElement linkVacancy = getDriver().findElement(By.xpath("//li[@class = 'menu-item']/a[text()='Вакансии']"));
         Set<String> oldWindowsSet = getDriver().getWindowHandles();
         linkVacancy.click();
@@ -369,7 +341,7 @@ public class GroupObukhovTest extends BaseTest {
 
     @Test
     public void testLinkVKontakte() {
-        getDriver().get(URL);
+        getDriver().get(MAIN_PAGE);
         WebElement vKontakte = getDriver().findElement(By.xpath("//a[@href='https://vk.com/urent_russia']"));
         Set<String> oldWindowsSet = getDriver().getWindowHandles();
         vKontakte.click();
@@ -383,14 +355,14 @@ public class GroupObukhovTest extends BaseTest {
 
     @Test
     public void testCheckCountMenuFranchiseButtons() {
-        getDriver().get(URLFranchise);
+        getDriver().get(URL_FRANCHISE);
 
-        Assert.assertEquals( getMenuFranchise().size(), 4);
+        Assert.assertEquals(getMenuFranchise().size(), 4);
     }
 
     @Test
     public void testCheckNamesMenuFranchiseButtons() {
-        getDriver().get(URLFranchise);
+        getDriver().get(URL_FRANCHISE);
         List<String> expectedResult = Arrays.asList("О сервисе", "Функции", "Наш партнер", "Запуск");
 
         for (int i = 0; i < getMenuFranchise().size(); i++) {
@@ -400,7 +372,7 @@ public class GroupObukhovTest extends BaseTest {
 
     @Test
     public void testAboutServiceLink() {
-        getDriver().get(URLFranchise);
+        getDriver().get(URL_FRANCHISE);
         goToAboutServicePage();
 
         Assert.assertEquals(getDriver().getCurrentUrl(), "https://start.urent.ru/#about-service");
@@ -408,7 +380,7 @@ public class GroupObukhovTest extends BaseTest {
 
     @Test
     public void testFunctionLink() {
-        getDriver().get(URLFranchise);
+        getDriver().get(URL_FRANCHISE);
         goToFunctionPage();
 
         Assert.assertEquals(getDriver().getCurrentUrl(), "https://start.urent.ru/#function");
@@ -416,7 +388,7 @@ public class GroupObukhovTest extends BaseTest {
 
     @Test
     public void testOurPartnerLink() {
-        getDriver().get(URLFranchise);
+        getDriver().get(URL_FRANCHISE);
         goToOurPartnerPage();
 
         Assert.assertEquals(getDriver().getCurrentUrl(), "https://start.urent.ru/#our-partner");
@@ -424,7 +396,7 @@ public class GroupObukhovTest extends BaseTest {
 
     @Test
     public void testStartLink() {
-        getDriver().get(URLFranchise);
+        getDriver().get(URL_FRANCHISE);
         goToStartPage();
 
         Assert.assertEquals(getDriver().getCurrentUrl(), "https://start.urent.ru/#start");
@@ -477,7 +449,7 @@ public class GroupObukhovTest extends BaseTest {
         List<String> data = Arrays.asList(
                 getRandomString(6),
                 RandomStringUtils.random(10, "0123456789"),
-                getRandomEmail(),
+                getRandomEmail(8, 10),
                 getRandomString(5)
 
         );
@@ -505,8 +477,9 @@ public class GroupObukhovTest extends BaseTest {
         }
     }
 
+    @Ignore
     @Test
-    public void testCheckRoundButtonHelpMenu(){
+    public void testCheckRoundButtonHelpMenu() {
         goToRoundButtonOnHelpPage();
 
         Assert.assertTrue(getDriver().findElement(By.id("uw-button-chat")).isDisplayed());
@@ -519,22 +492,54 @@ public class GroupObukhovTest extends BaseTest {
         goToRoundButtonOnHelpPage();
 
         getDriver().findElement(By.id("uw-button-telegram")).click();
-        Set<String> openPages = getDriver().getWindowHandles();
+        final Set<String> openPages = getDriver().getWindowHandles();
 
         String actualString = getDriver().switchTo().window(openPages.toArray()[1].toString()).getCurrentUrl();
         Assert.assertEquals(actualString, "https://t.me/Urent_support_bot");
     }
 
+    @Ignore
     @Test
     public void testCheckRoundButtonHelpMenuLinkToLiveChat() {
-        String expectedFrameText = "Используя чат, вы соглашаетесь с нашей политикой обработки персональных данных";
+        final String expectedFrameText = "Используя чат, вы соглашаетесь с нашей политикой обработки персональных данных";
 
         goToRoundButtonOnHelpPage();
         getDriver().findElement(By.id("uw-button-chat")).click();
 
-        String actualFrameText = getWait(5).until(ExpectedConditions.visibilityOfElementLocated(
+        String actualFrameText = getWait(8).until(ExpectedConditions.visibilityOfElementLocated(
                 By.xpath("//div[@class = 'sc-gzOgki uw__messenger-layout__frame jVOnDE']"))).getText();
 
         Assert.assertTrue(actualFrameText.contains(expectedFrameText));
+    }
+
+    @Test
+    public void testActiveElementsOfMainMenu() {
+        getDriver().get(MAIN_PAGE);
+
+        List<WebElement> nowMainMenu = getDriver().findElements(By.cssSelector(".menu-list"));
+        int size = nowMainMenu.size();
+        int activeElement = size;
+        int countInactiveElement = 0;
+        int countClick = 0;
+        for (int i = 0; i < size - 2; i++) {
+            if (activeElement < size) {
+                if (countClick == 0) {
+                    i = 0;
+                }
+                nowMainMenu.get(i).click();
+                countClick++;
+            }
+            for (int j = 0; j < size; j++) {
+                if (nowMainMenu.get(j).getAttribute("class").contains("menu-active-link")) {
+                    activeElement = j;
+                } else {
+                    countInactiveElement++;
+                }
+            }
+
+            Assert.assertTrue(activeElement == i && size - countInactiveElement == 1);
+
+            countInactiveElement = 0;
+        }
     }
 }
